--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "esignature-backend",
   "version": "1.0.0",
   "description": "e-Signature backend",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -16,11 +15,13 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
     "pdf-lib": "^1.17.1",
     "jsrsasign": "^10.8.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
